--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -50,7 +50,7 @@ jobs:
     - name: Code Coverage Report
       uses: irongut/CodeCoverageSummary@v1.3.0
       with:
-        filename: pytest-results*.xml
+        filename: pytest-results*
         badge: true
         fail_below_min: true
         format: markdown
