--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -43,14 +43,14 @@ jobs:
     - name: Upload pytest test results
       uses: actions/upload-artifact@v3
       with:
-        name: pytest-results-${{ matrix.python-version }}
+        name: pytest-results-${{ matrix.python-version }}.zip
         path: junit/test-results-${{ matrix.python-version }}.xml
       # Use always() to always run this step to publish test results when there are test failures
       if: ${{ always() }}
     - name: Code Coverage Report
       uses: irongut/CodeCoverageSummary@v1.3.0
       with:
-        filename: pytest-results*
+        filename: pytest-results-${{ matrix.python-version }}.zip
         badge: true
         fail_below_min: true
         format: markdown
