Point code coverage file to raw XML file

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -50,7 +50,7 @@ jobs:
     - name: Code Coverage Report
       uses: irongut/CodeCoverageSummary@v1.3.0
       with:
-        filename: pytest-results-${{ matrix.python-version }}.zip
+        filename: junit/test-results-${{ matrix.python-version }}.xml
         badge: true
         fail_below_min: true
         format: markdown
