--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -47,15 +47,8 @@ jobs:
         path: junit/test-results-${{ matrix.python-version }}.xml
       # Use always() to always run this step to publish test results when there are test failures
       if: ${{ always() }}
-    - name: Code Coverage Report
-      uses: irongut/CodeCoverageSummary@v1.3.0
+    - name: Code Coverage
+      uses: codecov/codecov-action@v3
       with:
-        filename: junit/test-results-${{ matrix.python-version }}.xml
-        badge: true
-        fail_below_min: true
-        format: markdown
-        hide_branch_rate: false
-        hide_complexity: false
-        indicators: true
-        output: both
-        thresholds: '85 95'
+        files: junit/test-results-${{ matrix.python-version }}.xml
+        verbose: true
