--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -39,16 +39,9 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pytest --doctest-modules --junitxml=junit/test-results-${{ matrix.python-version }}.xml
-    - name: Upload pytest test results
-      uses: actions/upload-artifact@v3
-      with:
-        name: pytest-results-${{ matrix.python-version }}.zip
-        path: junit/test-results-${{ matrix.python-version }}.xml
-      # Use always() to always run this step to publish test results when there are test failures
-      if: ${{ always() }}
+        pytest
     - name: Code Coverage
       uses: codecov/codecov-action@v3
       with:
-        files: junit/test-results-${{ matrix.python-version }}.xml
+        files: ./coverage.xml
         verbose: true
