--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ black = "^22.8.0"
 mypy = "^0.971"
 pytest = "^7.1.3"
 pytest-cov = "^3.0.0"
+Sphinx = "^5.1.1"
+sphinx-material = "^0.0.35"
 
 [tool.bandit]
 exclude_dirs = ["dist", "tests"]
